--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b8da8e">  <td>20/07/27 21:59:40</td>   <td>0</td> <td title="&lt;&lt;BaseTest.afterSuite()[pri:0, instance:ui_tests.LoginTests@3b69e7d1]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="a9a285">  <td>20/07/28 21:26:10</td>   <td>0</td> <td title="&lt;&lt;BaseTest.afterSuite()[pri:0, instance:ui_tests.LoginTests@6c49835d]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b8da8e">  <td>20/07/27 21:59:40</td>   <td>-71</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:ui_tests.LoginTests@3b69e7d1]">&lt;&lt;afterTest</td> 
+<tr bgcolor="a9a285">  <td>20/07/28 21:26:10</td>   <td>-76</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:ui_tests.LoginTests@6c49835d]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="94aada">  <td>20/07/27 21:59:40</td>   <td>-87</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.successfulLoginTest(java.lang.String, java.lang.String)[pri:0, instance:ui_tests.LoginTests@3b69e7d1]">successfulLoginTest</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="60d6b1">  <td>20/07/28 21:26:10</td>   <td>-89</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.successfulLoginTest(java.lang.String, java.lang.String)[pri:0, instance:ui_tests.LoginTests@6c49835d]">successfulLoginTest</td> 
+  <td>main@1392425346</td>   <td></td> </tr>
 </table>
